# secret-student

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.llamacpp.yaml  compose.yaml  pyproject.toml  set_env_for_space.py  set_env_local.py
app/: __init__.py  api.py  config.py  database.py  debug_submissions.py  image_validation.py  llm_clients.py  llm_tracing.py  models.py  runtime.py  schemas.py  security.py  server.py
config/: modal-models.example.yaml
docs/: TECHNICAL.md
frontend/static/: index.html
frontend/static/src/: api.js  character.js  main.js  notebook.js  router.js  styles.css  world.js
scripts/: __init__.py  deploy_llamacpp_modal.py  generate_character_sprites.py  llamacpp_modal_config.py  preload_space_models.py  test_llamacpp_modal.py
tests/: test_api.py  test_frontend_structure.py  test_llamacpp_modal_proxy.py  test_llamacpp_modal_smoke.py  test_modal_config.py  test_preload_models.py  test_runtime.py  test_server.py  test_set_env_for_space.py  test_set_env_local.py
