[project]
name = "secret-student"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt<4.1",
    "fastapi>=0.136.3",
    "gradio>=6.18.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.19.0",
    "json-repair>=0.60.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pytest>=9.1.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
modal = [
    "modal>=1.5.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
